# docs/swagger.yaml
@@ -23,7 +23,7 @@ definitions:
     type: object
   entity.Payment:
     properties:
-      created_date:
+      created_at:
         type: string
       customer_id:
         type: integer
@@ -70,6 +70,22 @@ definitions:
     - invoice_id
     - rating
     - tour_guide_id
+    type: object
+  request.CreatePaymentRequest:
+    properties:
+      customer_id:
+        type: integer
+      invoice_id:
+        type: integer
+      payment_method:
+        type: string
+      price:
+        type: number
+    required:
+    - customer_id
+    - invoice_id
+    - payment_method
+    - price
     type: object
   request.CreatePlatformFeedbackRequest:
     properties:
@@ -708,6 +724,39 @@ paths:
           schema:
             $ref: '#/definitions/response.MessageApiResponse'
       summary: Callback after successful payment
+      tags:
+      - payments
+  /payment-service/api/v1/payments/create:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new payment and returns redirect info or confirmation
+      parameters:
+      - description: Create Payment Request
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.CreatePaymentRequest'
+      produces:
+      - application/json
+      responses:
+        "400":
+          description: Invalid data. Please try again.
+          schema:
+            $ref: '#/definitions/response.MessageApiResponse'
+        "401":
+          description: You have no rights to access this action.
+          schema:
+            $ref: '#/definitions/response.MessageApiResponse'
+        "500":
+          description: There is something wrong in the system during the process.
+            Please try again later.
+          schema:
+            $ref: '#/definitions/response.MessageApiResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a payment
       tags:
       - payments
   /payment-service/api/v1/payments/customer/{id}:
