# handler/payment.go
@@ -220,3 +220,39 @@ func CallbackPaymentCancel(ctx *gin.Context) {
 		PostType: action_type.REDIRECT,
 	})
 }
+
+// CreatePayment godoc
+// @Summary      Create a payment
+// @Description  Creates a new payment and returns redirect info or confirmation
+// @Tags         payments
+// @Accept       json
+// @Produce      json
+// @Security     BearerAuth
+// @Param        request body request.CreatePaymentRequest true "Create Payment Request"
+// @Failure 401 {object} response.MessageApiResponse "You have no rights to access this action."
+// @Failure 400 {object} response.MessageApiResponse "Invalid data. Please try again."
+// @Failure 500 {object} response.MessageApiResponse "There is something wrong in the system during the process. Please try again later."
+// @Router       /payment-service/api/v1/payments/create [post]
+func CreatePayment(ctx *gin.Context) {
+	var request request.CreatePaymentRequest
+	if ctx.ShouldBindJSON(&request) != nil {
+		utils.ProcessResponse(utils.GenerateInvalidRequestAndSystemProblemModel(ctx, nil))
+		return
+	}
+
+	service, err := business_logic.GeneratePaymentService()
+	if err != nil {
+		utils.ProcessResponse(utils.GenerateInvalidRequestAndSystemProblemModel(ctx, err))
+		return
+	}
+
+	res, err := service.CreatePayment(request, ctx)
+
+	utils.ProcessResponse(response.ApiResponse{
+		Data1:    res,
+		Data2:    res,
+		ErrMsg:   err,
+		Context:  ctx,
+		PostType: action_type.REDIRECT,
+	})
+}
